# Cpp-Project

./: .gitignore  CMakeLists.txt  Channel.h  ChannelThreads.h  ClientFeederApplication.h  IChannel.h  README.md  config.cfg  main.cpp
.circleci/: config.yml
ConfigManager/: AppConfig.h  CMakeLists.txt  ConfigEnum.h  ConfigManagerLib.h  EnumParser.h  IConfigurationMap.h  IReadConfig.h  ReadConfig.h  ReadConfigCfg.cpp  ReadConfigCfg.h  ReadConfigConcretions.h  Reader.h
LogManager/: CMakeLists.txt  ILogger.h  LogManagerLib.h  Logger.h  SpdLogger.cpp  SpdLogger.h
ReadConfig/: CMakeLists.txt  ConfigEnum.h  ConfigurationParser.h  EnumParser.h  IReadConfig.h  ReadConfig.h  ReadConfigCfg.cpp  ReadConfigCfg.h
